Correct z-index on main menu

--- a/src/menu/menu.scss
+++ b/src/menu/menu.scss
@@ -2,7 +2,7 @@
 
 .component__menu {
     position: fixed;
-    z-index: 3;
+    z-index: 5;
     width: 54px;
     text-align: center;
     padding-top: 15px;
