--- a/src/sponsors/sponsors.scss
+++ b/src/sponsors/sponsors.scss
@@ -2,7 +2,8 @@
 
 .component__sponsors.screen {
     background-color: #efefef;
-    background: linear-gradient(to bottom, rgba(18, 18, 18, 0.8) 0, rgba(24, 24, 24, 0.7) 100%), url('/assets/6fc88503f7cd8fae-orig_rooster_header_image.jpg');
+    background: linear-gradient(to bottom, rgba(18, 18, 18, 0.7) 0, rgba(18, 18, 18, 0.7) 100%), url('/assets/6fc88503f7cd8fae-orig_rooster_header_image.jpg');
+    //background-size: 100% auto;
     background-size: cover;
     background-attachment: fixed;
     background-position: center bottom 0;
